[tool.poetry]
name = "codebuild-poetry-cache"
version = "0.1.0"
description = ""
authors = []

[tool.poetry.dependencies]
python = "~3.10"
apscheduler = "3.10.1"
boto3 = "1.26.89"
channels-redis = "4.0.0"
channels = "4.0.0"
daphne = "4.0.0"
dependency-injector = "4.41.0"
django-concurrency = "2.4"
django-cors-headers = "3.14.0"
django = "4.1.5"
djangorestframework = "3.14.0"
faker = "17.6.0"
numpy = "1.24.2"
pika = "1.3.1"
psycopg2-binary = "2.9.5"
requests = "2.31.0"
schedule = "1.1.0"
# https://github.com/python-poetry/poetry/issues/4231#issuecomment-1465949597
torch = [
    { url = "https://download.pytorch.org/whl/cpu/torch-1.13.1%2Bcpu-cp310-cp310-linux_x86_64.whl", markers = "sys_platform == 'linux' and platform_machine != 'aarch64'"},
    { url = "https://download.pytorch.org/whl/cpu/torch-1.13.1%2Bcpu-cp310-cp310-linux_x86_64.whl", markers = "sys_platform == 'darwin' and platform_machine != 'arm64'"},
    { url = "https://download.pytorch.org/whl/cpu/torch-1.13.1-cp310-none-macosx_11_0_arm64.whl", markers = "sys_platform == 'darwin' and platform_machine == 'arm64'"},
    { url = "https://download.pytorch.org/whl/torch-1.13.1-cp310-cp310-manylinux2014_aarch64.whl", markers = "sys_platform == 'linux' and platform_machine == 'aarch64'"},
]
twilio = "7.17.0"
websocket-client = "1.5.1"

[tool.poetry.group.dev.dependencies]
black = "23.7.0"
isort = "5.12.0"
pre-commit = "3.5"
pytest-django = "4.5.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

